@@ -9,6 +9,15 @@ FLOOR_RED .5             # floor color (without moviepack)
 FLOOR_GREEN .5           # floor color (without moviepack)
 FLOOR_BLUE .7            # floor color (without moviepack)
 
+UPPER_SKY_RED .5         # upper sky color
+UPPER_SKY_GREEN .5       # upper sky color
+UPPER_SKY_BLUE .5        # upper sky color
+
+UPPER_SKY_SCALE 1        # upper sky scaling (decrease to make features larger)
+
+UPPER_SKY_HEIGHT 100     # upper sky height (changes during gameplay cause graphical errors)
+LOWER_SKY_HEIGHT 50      # lower sky height (changes during gameplay cause graphical errors)
+
 RIM_WALL_STRETCH_X 100   # extension of the rim wall texture in the horizontal direction
 RIM_WALL_STRETCH_Y 50    # extension of the rim wall texture in the vertical direction
 RIM_WALL_WRAP_Y 0        # set to 1 if the rim wall texture should repeat in the vertical direction
